# newbiiOS

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  CLAUDE_CODE_MVP_MEGA_PROMPT.md  CLAUDE_CODE_PHASE2_PROMPT.md  PHASE3_STUDIO_EXCHANGE_DRIFT.md  PHASE4_FULL_TESTING.md  PHASE5_PRODUCTION_READY.md  PHASE6_FINAL_TEST_AND_LAUNCH.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
api/: Dockerfile  pyproject.toml  railway.json
api/app/: main.py
api/app/core/: auth.py  cache.py  config.py  llm.py  security.py  supabase.py
api/app/routers/: drift.py  exchange.py  health.py  leaderboard.py  predictions.py  studio.py  users.py
api/app/schemas/: exchange.py  prediction.py  studio.py
api/app/services/: prediction_pipeline.py  report_export.py
api/app/services/data_providers/: malaysia.py  news.py  worldbank.py
api/app/services/drift/: monitor.py
api/app/services/engines/: debate_engine.py  ensemble.py  mcts_engine.py
api/app/services/exchange/: reputation.py  signal_fusion.py
api/tests/: conftest.py  seed.py  test_auth.py  test_auth_deep.py  test_cache.py  test_data_providers.py  test_debate_engine.py  test_drift.py  test_drift_deep.py  test_e2e_real.py  test_ensemble.py  test_exchange.py  test_exchange_deep.py  test_health.py  test_llm.py  test_llm_resilience.py  test_mcts_engine.py  test_monitoring.py  test_pipeline.py  test_pipeline_deep.py  test_predictions.py  test_production_data.py  test_security.py  test_studio.py  test_studio_deep.py
docs/: FutureOS_Development_Blueprint.md  LAUNCH_CHECKLIST.md
supabase/: config.toml
(+84 files in other folders)
